--- a/ERS_MylesC/src/main/webapp/Views/ERS_Login.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Login.html
@@ -30,7 +30,7 @@
                 
                 <br><button type="submit" class="btn btn-primary" id="login_btn">Sign in</button>
             </form>
-            <form action="ERSNewUser.html">
+            <form action="ERS_NewUser.html">
             <br><button class="btn btn-primary" id="new_user_btn" style="margin-right:auto">New User</button>
             </form>
         </div>
