--- a/ERS_MylesC/src/main/webapp/Views/ERS_NewUser.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_NewUser.html
@@ -25,6 +25,13 @@
                     <input type="text" class="form-control" id="ers_username" placeholder="Username">
                     <label for="ers_password">Password</label>
                     <input type="password" class="form-control" id="ers_password" placeholder="Password">
+                    <input type = "text" placeholder = "First Name">
+                <input type = "text" placeholder = "Last Name" class="form-control" id="ers_password">
+                <br><input type = "text" placeholder="email" class="form-control" id="ers_password">
+                <input type = "text" placeholder="confirm email" class="form-control" id="ers_password">
+                <br><input type = "password" placeholder= "password" class="form-control" id="ers_password">
+                <input type = "password" placeholder= "confirm password" class="form-control" id="ers_password">
+                <br><input type = "submit" value = "Don't push this button!">
                 </div>
                 <br><button type="submit" class="btn btn-primary" id="newUser_btn">Create</button>
             </form>
