--- a/ERS_MylesC/src/main/webapp/Views/ERS_Login.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Login.html
@@ -19,14 +19,14 @@
     </h2>
     <h4 style="margin-left: 30rem; margin-right: 30rem; background-color: rgb(91, 222, 255);border-radius: 0.5rem">
         <div >
-            <form class="px-4 py-3" method="post" action="login">
+            <form class="px-4 py-3" method="post" action="/ERS_MylesC/login">
                 <div class="form-group">
                     <label for="ers_username">Username</label>
-                    <input type="text" class="form-control" id="ers_username" placeholder="Username">
+                    <input type="text" class="form-control" name="ers_username" placeholder="Username">
                 </div>
                 <div class="form-group">
                     <label for="ers_password">Password</label>
-                    <input type="password" class="form-control" id="ers_password" placeholder="Password">
+                    <input type="password" class="form-control" name="ers_password" placeholder="Password">
                 
                 <br><button type="submit" class="btn btn-primary" id="login_btn">Sign in</button>
             </form>
@@ -36,6 +36,7 @@
         </div>
     </h4>
     <!--script src="main.js"></script-->
+    <script src ="/ERS_MylesC/Scripts/messages.js">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
