--- a/ERS_MylesC/src/main/webapp/Views/ERS_Login.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Login.html
@@ -12,6 +12,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#" style="color:yellow;background-color:gray;padding-right: 3rem;padding-left: 1rem;border-radius: 3rem">ERS</a>
         </nav>
+    <h3>
+    	<p id="myUser"></p>
+    </h3>
     <h2 >
         <center>
         <br><p id="message" style="color:rgb(255, 0, 0)"></p>
@@ -37,6 +40,7 @@
     </h4>
     <!--script src="main.js"></script-->
     <script src ="/ERS_MylesC/Scripts/messages.js">
+    <script src ="/ERS_MylesC/Scripts/userInfo.js">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
