tables are shown

--- a/ERS_MylesC/src/main/webapp/Views/ERS_Options.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Options.html
@@ -33,9 +33,13 @@
         </div>
         <br>
     </h4>
+    <form class="px-4 py-3" method="post" action="/ERS_MylesC/logout">
+                <br><button type="submit" class="btn btn-primary" id="add_btn">Logout</button>
+    </form>
+    
     <!--script src="main.js"></script-->
-    <script src ="/ERS_MylesC/Scripts/userInfo.js">
-    <script src ="/ERS_MylesC/Scripts/messages.js">
+    <script src ="/ERS_MylesC/Scripts/userInfo.js"></script>
+    <script src ="/ERS_MylesC/Scripts/messages.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
