--- a/ERS_MylesC/src/main/webapp/Views/ERS_Info.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Info.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ERS_App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    
 </head>
-<body>
-
+<body style="background-color:#a8e6cf">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#" style="color:yellow;background-color:gray;padding-right: 3rem;padding-left: 1rem;border-radius: 3rem">ERS</a>       
+        </nav>
+        <div style="float:left">
+    		<form class="px-4 py-3" action="/ERS_MylesC/Views/ERS_Table.html">
+                <button type="submit" class="btn btn-primary" >Back</button>
+    		</form>
+    	</div>
+    	<div style="float:right">
+    		<form class="px-4 py-3" method="post" action="/ERS_MylesC/logout">
+                <button type="submit" class="btn btn-primary" id="add_btn">Logout</button>
+   		 	</form>
+    	</div>
+    <h2 >
+        <center>
+        <br><div name="message" id="message" style="color:rgb(255, 0, 0)"></div>
+        </center>
+    </h2>
+    <center>
+    	<p id="myUser"></p>
+    </center>
+    <h4 style="margin-left: 30rem; margin-right: 30rem; background-color: rgb(91, 222, 255);border-radius: 0.5rem">
+        <div>
+            <form id = "ticketStatus" class="px-4 py-3" method="post" action="/ERS_MylesC/ticketInfo">
+                    <p id = "ticketId"></p>
+                    <p id = "author"></p>
+                    <p id = "amount"></p>
+                    <p id = "descript"></p>
+                    <p id = "type"></p>
+                    <p id = "status"></p>
+                	<label style="display:none" id="statusA" for="ers_status_id">Status Options</label>
+                	<br><select style="display:none" id="statusB" name="statusId">
+    						<option value="2">Decline</option>
+    						<option value="3">Approve</option>
+  					</select>
+                	<br><br><button style="display:none" id = "statusC" type="submit" class="btn btn-primary" id="newTicket_btn">Update Ticket</button>
+                </div>
+            </form>
+        </div>
+    </h4>
+    
+    <!--script src="main.js"></script-->
+    <script src ="/ERS_MylesC/Scripts/userInfo.js"></script>
+    <script src ="/ERS_MylesC/Scripts/ticketInfo.js"></script>
+    <script src ="/ERS_MylesC/Scripts/messages.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
