--- a/ERS_MylesC/src/main/webapp/Views/ERS_NewUser.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_NewUser.html
@@ -12,6 +12,11 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#" style="color:yellow;background-color:gray;padding-right: 3rem;padding-left: 1rem;border-radius: 3rem">ERS</a>
         </nav>
+        <div style="float:left">
+        <form class="px-4 py-3" action="/ERS_MylesC/Views/ERS_Login.html">
+                <br><button type="submit" class="btn btn-primary" >Back</button>
+    </form> 
+    </div>
     <h2 >
         <center>
         <br><div name="message" id="message" style="color:rgb(255, 0, 0)"></div>
