added status filter

--- a/ERS_MylesC/src/main/webapp/Views/ERS_Table.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Table.html
@@ -30,9 +30,9 @@
     <center>
     	<p id="myUser"></p>
     </center>
-    	<div style="float:right; padding-right:5px">
-		<select name="ers_role_id">
-							<option value="1"></option>
+    	<div style="float:right; padding-right:10rem">
+		<select name="ers_role_select" id="ers_role_select">
+							<option value="1">Status Filter</option>
     						<option value="Pending">Pending</option>
     						<option value="Denied">Denied</option>
     						<option value="Approved">Approved</option>
