removed add ticket for admin

--- a/ERS_MylesC/src/main/webapp/Views/ERS_Options.html
+++ b/ERS_MylesC/src/main/webapp/Views/ERS_Options.html
@@ -33,7 +33,7 @@
                 <br><button type="submit" class="btn btn-primary" id="tables_btn">View Tickets</button>
             </form>  
        	</div>
-       	<div>
+       	<div style="display:none" id="addButton">
             <form class="px-4 py-3" method="post" action="/ERS_MylesC/Views/ERS_NewTicket.html">
                 <br><button type="submit" class="btn btn-primary" id="add_btn">Add Ticket</button>
             </form>
